add api gateway and fix bugs
