# src/order-service/internal/docs/swagger.json
@@ -107,10 +107,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.OrdersResponse"
+                            "$ref": "#/definitions/dto.OrderCreatedResponse"
                         }
                     },
                     "400": {
@@ -222,6 +222,15 @@
                 }
             }
         },
+        "dto.OrderCreatedResponse": {
+            "type": "object",
+            "properties": {
+                "OrderID": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                }
+            }
+        },
         "dto.OrderResponse": {
             "type": "object",
             "properties": {
@@ -232,6 +241,10 @@
                 "createdAt": {
                     "type": "string",
                     "example": "2025-12-23T09:19:23.458426Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "This is a description"
                 },
                 "id": {
                     "type": "string",
@@ -280,12 +293,12 @@
             "enum": [
                 "PENDING",
                 "PAID",
-                "FAILED"
+                "CANCELED"
             ],
             "x-enum-varnames": [
                 "OrderPending",
                 "OrderPaid",
-                "OrderFailed"
+                "OrderCanceled"
             ]
         }
     }
